--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {width: 100%;
   background-color:#00ff00;
 }
 .side{
-  float:right;
+  float:left;
   width:250px;
   height:250px;
   background-color:#3300ff;
